# helphub

./: README.md  main.py  mcp_cliento.py  mcp_srvo.py  pyproject.toml  security.py  ticketing_tool.db  utils.py
templates/: dashboard.html  landing.html  login.html  register.html
templates/partials/: chat_message.html
